# markd_smith

./: AGENTS.md  Cargo.toml  markd_smith-plan.md
.cargo/: config.toml
src/: main.rs
